--- a/notebook/pmg_wyckoff.ipynb
+++ b/notebook/pmg_wyckoff.ipynb
@@ -9,6 +9,17 @@
     "import pymatgen\n",
     "import pymatgen.symmetry.analyzer\n",
     "def wyckoff_fingerprint(structure: pymatgen.core.Structure) -> str:\n",
+    "    '''\n",
+    "    Generate Wyckoff fingerprint from a pymatgen.core.Structure in the form of\n",
+    "        [International Tables of Crystallography space group number]_[Wyckof_number_for_each_site]\n",
+    "        e.g. 164_d_d_d\n",
+    "    \n",
+    "    Args:\n",
+    "        structure (pymatgen.core.Structure): Structure object\n",
+    "    \n",
+    "    Returns:\n",
+    "        str: Wyckoff fingerprint string\n",
+    "    '''\n",
     "    SYMPREC = 1e-5\n",
     "    ANGLE_TOLERANCE = -1\n",
     "    spacegroup_analyzer = pymatgen.symmetry.analyzer.SpacegroupAnalyzer(structure,\n",
