--- a/notebook/spg_wyckoff.ipynb
+++ b/notebook/spg_wyckoff.ipynb
@@ -10,6 +10,10 @@
     "import pymatgen\n",
     "import pymatgen.io.cif  \n",
     "def get_cell(self: pymatgen.core.Structure) -> tuple:\n",
+    "    '''\n",
+    "    Generate cell tuple for spglib in the form\n",
+    "        ([[3x3 lattice]], [[Nx3 positions]], [N atomic numbers])\n",
+    "    '''\n",
     "    lattice = self.lattice.matrix\n",
     "    positions = self.frac_coords\n",
     "    numbers = [site.specie.Z for site in self.sites]\n",
@@ -18,6 +22,17 @@
     "pymatgen.core.Structure.get_cell = get_cell\n",
     "\n",
     "def get_wyckoffs(cell: tuple, symprec: float=1e-5, angle_tolerance: float=1.) -> [str]:\n",
+    "    '''\n",
+    "    Get Wyckoff occupancies from an spglib cell tuple\n",
+    "    \n",
+    "    Args:\n",
+    "        cell (tuple): ([[3x3 lattice]], [[Nx3 positions]], [N atomic numbers])\n",
+    "        symprec (float): cartesian distance tolerance for symmetries\n",
+    "        angle_tolerance (float): angle tolerance in degrees\n",
+    "        \n",
+    "    Returns:\n",
+    "        list: list of Wyckoff occupancy strings (one per site)\n",
+    "    '''\n",
     "    space_group = spglib.get_spacegroup(cell, symprec=SYMPREC)\n",
     "    symmetry = spglib.get_symmetry(cell, symprec=SYMPREC)\n",
     "    hall_number = spglib.get_hall_number_from_symmetry(symmetry['rotations'],\n",
@@ -29,9 +44,32 @@
     "    return symmetry_dataset['wyckoffs']\n",
     "\n",
     "def get_structure(cell: tuple) -> pymatgen.core.Structure:\n",
+    "    '''\n",
+    "    Generate pymatgen.core.Structure object from an spglib cell tuple\n",
+    "    \n",
+    "    Args:\n",
+    "        cell (tuple): ([[3x3 lattice]], [[Nx3 positions]], [N atomic numbers])\n",
+    "    \n",
+    "    Returns:\n",
+    "        pymatgen.core.Structure: pymatgen Structure object\n",
+    "    '''\n",
     "    return pymatgen.Structure(cell[0], cell[2], cell[1])\n",
     "\n",
     "def wyckoff_fingerprint(cell: tuple, symprec: float=1e-5, angle_tolerance: float=1.) -> str:\n",
+    "    '''\n",
+    "    Generate Wyckoff fingerprint of the form\n",
+    "        [International Tables of Crystallography space group number]_[Wyckof_number_for_each_site]\n",
+    "        from an spglib tuple\n",
+    "        e.g. 164_d_d_d\n",
+    "        \n",
+    "    Args:\n",
+    "        cell (tuple): ([[3x3 lattice]], [[Nx3 positions]], [N atomic numbers])\n",
+    "        symprec (float): cartesian distance tolerance for symmetries\n",
+    "        angle_tolerance (float): angle tolerance in degrees\n",
+    "        \n",
+    "    Returns:\n",
+    "        str: Wyckoff fingerprint\n",
+    "    '''\n",
     "    wyckoffs = get_wyckoffs(cell=cell, symprec=symprec, angle_tolerance=angle_tolerance)\n",
     "    space_group = spglib.get_spacegroup(cell, symprec=SYMPREC).split('(')[-1].split(')')[0]\n",
     "    return '_'.join([space_group] + wyckoffs)"
