--- a/notebook/pmg_wyckoff.ipynb
+++ b/notebook/pmg_wyckoff.ipynb
@@ -32,7 +32,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -201,6 +203,66 @@
      "text": [
       "********************************************************************************\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Structure Summary\n",
+       "Lattice\n",
+       "    abc : 3.19064343 3.19064343 21.31819994\n",
+       " angles : 90.0 90.0 119.99999999999999\n",
+       " volume : 187.94799951208387\n",
+       "      A : 3.19064343 0.0 1.953705631885016e-16\n",
+       "      B : -1.5953217149999994 2.763178264797917 1.953705631885016e-16\n",
+       "      C : 0.0 0.0 21.31819994\n",
+       "PeriodicSite: Mo (0.0000, 0.0000, 0.0048) [0.0000, 0.0000, 0.0002]\n",
+       "PeriodicSite: Mo (1.5953, 0.9211, 7.1108) [0.6667, 0.3333, 0.3336]\n",
+       "PeriodicSite: Mo (0.0000, 1.8421, 14.2169) [0.3333, 0.6667, 0.6669]\n",
+       "PeriodicSite: S (0.0000, 0.0000, 12.6516) [0.0000, 0.0000, 0.5935]\n",
+       "PeriodicSite: S (1.5953, 0.9211, 19.7577) [0.6667, 0.3333, 0.9268]\n",
+       "PeriodicSite: S (0.0000, 1.8421, 5.5455) [0.3333, 0.6667, 0.2601]\n",
+       "PeriodicSite: S (0.0000, 0.0000, 15.7821) [0.0000, 0.0000, 0.7403]\n",
+       "PeriodicSite: S (1.5953, 0.9211, 1.5700) [0.6667, 0.3333, 0.0736]\n",
+       "PeriodicSite: S (0.0000, 1.8421, 8.6761) [0.3333, 0.6667, 0.4070]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Structure Summary\n",
+       "Lattice\n",
+       "    abc : 7.340952596178226 7.340952596178226 7.3409525961782265\n",
+       " angles : 25.10311905087473 25.10311905087473 25.103119050874717\n",
+       " volume : 62.64933317069473\n",
+       "      A : 7.165510005923185 -1.5953217150000014 0.0\n",
+       "      B : 7.165510005923185 1.5953217150000014 0.0\n",
+       "      C : 6.810329234108375 0.0 2.740255598002616\n",
+       "PeriodicSite: Mo (0.0047, 0.0000, 0.0006) [0.0002, 0.0002, 0.0002]\n",
+       "PeriodicSite: S (12.5467, -0.0000, 1.6262) [0.5935, 0.5935, 0.5935]\n",
+       "PeriodicSite: S (15.6512, 0.0000, 2.0286) [0.7403, 0.7403, 0.7403]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'160_a_a_a'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "********************************************************************************\n"
+     ]
     }
    ],
    "source": [
@@ -213,7 +275,8 @@
     "\n",
     "cifs = ['../data/MoS2_mp-1434_computed.cif',\n",
     "        '../data/MoS2_mp-1434_conventional_standard.cif',\n",
-    "        '../data/MoS2_mp-1434_primitive.cif']\n",
+    "        '../data/MoS2_mp-1434_primitive.cif',\n",
+    "        '../data/MoS2_mp-1434_symmetrized.cif']\n",
     "structures = []\n",
     "for cif in cifs:\n",
     "    structures += pymatgen.io.cif.CifParser(cif).get_structures(primitive=False)\n",
