--- a/notebook/spg_wyckoff.ipynb
+++ b/notebook/spg_wyckoff.ipynb
@@ -77,61 +77,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Structure Summary\n",
-       "Lattice\n",
-       "    abc : 7.3409526 7.34095259 7.3409526\n",
-       " angles : 25.103119069999998 25.103119139999997 25.103119100000026\n",
-       " volume : 62.6493334321811\n",
-       "      A : 3.11438974864272 0.0 6.64756809434818\n",
-       "      B : 1.4800076654772434 2.7402555974884333 6.647568089097668\n",
-       "      C : 0.0 0.0 7.3409526\n",
-       "PeriodicSite: Mo (4.5934, 2.7396, 20.6315) [0.9998, 0.9998, 0.9998]\n",
-       "PeriodicSite: S (1.8678, 1.1140, 8.3893) [0.4065, 0.4065, 0.4065]\n",
-       "PeriodicSite: S (1.1931, 0.7116, 5.3589) [0.2597, 0.2597, 0.2597]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Structure Summary\n",
-       "Lattice\n",
-       "    abc : 7.340952596229538 7.340952596229538 7.340952596229538\n",
-       " angles : 25.10311908072692 25.10311908072692 25.10311908072692\n",
-       " volume : 62.64933331369399\n",
-       "      A : 1.595321716877836 0.9210594226834745 7.106066646157573\n",
-       "      B : -1.595321716877836 0.9210594226834745 7.106066646157573\n",
-       "      C : 0.0 -1.842118845366949 7.106066646157573\n",
-       "PeriodicSite: Mo (-0.0000, -0.0000, 0.0048) [0.0002, 0.0002, 0.0002]\n",
-       "PeriodicSite: S (0.0000, -0.0000, 12.6516) [0.5935, 0.5935, 0.5935]\n",
-       "PeriodicSite: S (0.0000, 0.0000, 15.7821) [0.7403, 0.7403, 0.7403]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'160_a_a_a'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "********************************************************************************\n"
+      "(array([[ 3.19064344e+00,  0.00000000e+00,  1.95370564e-16],\n",
+      "       [-1.59532172e+00,  2.76317827e+00,  1.95370564e-16],\n",
+      "       [ 0.00000000e+00,  0.00000000e+00,  2.13181999e+01]]), array([[0.666667, 0.333333, 0.33311 ],\n",
+      "       [0.333333, 0.666667, 0.666444],\n",
+      "       [0.      , 0.      , 0.999777],\n",
+      "       [0.333333, 0.666667, 0.073202],\n",
+      "       [0.      , 0.      , 0.259688],\n",
+      "       [0.      , 0.      , 0.406535],\n",
+      "       [0.666667, 0.333333, 0.593021],\n",
+      "       [0.666667, 0.333333, 0.739869],\n",
+      "       [0.333333, 0.666667, 0.926354]]), [42, 42, 42, 16, 16, 16, 16, 16, 16])\n"
      ]
     },
     {
@@ -193,60 +158,6 @@
      "text": [
       "********************************************************************************\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Structure Summary\n",
-       "Lattice\n",
-       "    abc : 7.3409526 7.3409526 7.3409526\n",
-       " angles : 25.10311911999998 25.10311911999998 25.103119119999967\n",
-       " volume : 62.64933359662721\n",
-       "      A : 3.1143897463222805 0.0 6.647568095435307\n",
-       "      B : 1.4800076695142357 2.7402556067229202 6.647568095435307\n",
-       "      C : 0.0 0.0 7.3409526\n",
-       "PeriodicSite: Mo (4.5934, 2.7396, 20.6315) [0.9998, 0.9998, 0.9998]\n",
-       "PeriodicSite: S (1.8678, 1.1140, 8.3893) [0.4065, 0.4065, 0.4065]\n",
-       "PeriodicSite: S (1.1931, 0.7116, 5.3589) [0.2597, 0.2597, 0.2597]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Structure Summary\n",
-       "Lattice\n",
-       "    abc : 7.3409526 7.3409526 7.3409526\n",
-       " angles : 25.103119119999967 25.103119119999967 25.10311911999998\n",
-       " volume : 62.649333596627194\n",
-       "      A : 1.5953217201530057 0.9210594245743945 7.106066649072291\n",
-       "      B : -1.5953217201530057 0.9210594245743945 7.106066649072291\n",
-       "      C : 0.0 -1.842118849148789 7.106066649072291\n",
-       "PeriodicSite: Mo (-0.0000, -0.0000, 0.0048) [0.0002, 0.0002, 0.0002]\n",
-       "PeriodicSite: S (-0.0000, 0.0000, 12.6516) [0.5935, 0.5935, 0.5935]\n",
-       "PeriodicSite: S (0.0000, 0.0000, 15.7821) [0.7403, 0.7403, 0.7403]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'160_a_a_a'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "********************************************************************************\n"
-     ]
     }
    ],
    "source": [
@@ -255,7 +166,9 @@
     "\n",
     "cifs = ['../data/MoS2_mp-1434_computed.cif',\n",
     "        '../data/MoS2_mp-1434_conventional_standard.cif',\n",
-    "        '../data/MoS2_mp-1434_primitive.cif']\n",
+    "        '../data/MoS2_mp-1434_primitive.cif',\n",
+    "        '../data/MoS2_mp-1434_symmetrized.cif']\n",
+    "\n",
     "structures = []\n",
     "for cif in cifs:\n",
     "    structures += pymatgen.io.cif.CifParser(cif).get_structures(primitive=False)\n",
