--- a/notebook/tidy_wyckoff.ipynb
+++ b/notebook/tidy_wyckoff.ipynb
@@ -5,23 +5,14 @@
    "metadata": {},
    "source": [
     "## TODO\n",
-    "1. Figure out what's up with losing symmetry inside PLATON / STRUCTURE TIDY\n",
-    "2. Ask Martin about how Wyckoffs should be represented (per site? reduced?)\n",
-    "3. Talk to Martin about Hall Numbers (has he heard of them?)\n",
-    "    1. Research Hall Numbers\n",
-    "4. Implement Wyckoff fingerprints for:\n",
-    "    1. Pure spglib\n",
-    "    2. spglib + pymatgen\n",
-    "    3. spglib + STRUCTURE TIDY\n",
-    "5. Implement XRD fingerprints using pymatgen XRD\n",
-    "6. aiida CIF database\n",
-    "    1. Import into aiida\n",
-    "    2. Convert to `pymatgen.core.Structure` s\n",
-    "    3. Create mongoDB collection for `pymatgen.core.Structure` s\n",
-    "7. Fingerprint mongoDB with 4.\n",
+    "1. Ask Martin about how Wyckoffs should be represented (per site? reduced?)\n",
+    "2. aiida CIF database\n",
+    "    1. Convert to `pymatgen.core.Structure` s\n",
+    "    2. Create mongoDB collection for `pymatgen.core.Structure` s\n",
+    "3. Fingerprint mongoDB\n",
     "    1. Make a collection for each flavor of fingerprint\n",
     "    2. Add all related metadata, tolerances, etc. (spglib / STRUCTURE TIDY / pymatgen)\n",
-    "8. Create RESTful interface for 4., 6.\n",
+    "4. Create RESTful interface for structures, fingerprinting, etc.\n",
     "    1. GET fingerprints by sending structure data (CIF, `pymatgen.core.Structure`, etc.)\n",
     "    2. GET structures by query\n",
     "    3. GET structure comparisons\n",
@@ -459,6 +450,66 @@
      "text": [
       "********************************************************************************\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Structure Summary\n",
+       "Lattice\n",
+       "    abc : 3.19064343 3.19064343 21.31819994\n",
+       " angles : 90.0 90.0 119.99999999999999\n",
+       " volume : 187.94799951208387\n",
+       "      A : 3.19064343 0.0 1.953705631885016e-16\n",
+       "      B : -1.5953217149999994 2.763178264797917 1.953705631885016e-16\n",
+       "      C : 0.0 0.0 21.31819994\n",
+       "PeriodicSite: Mo (0.0000, 0.0000, 0.0048) [0.0000, 0.0000, 0.0002]\n",
+       "PeriodicSite: Mo (1.5953, 0.9211, 7.1108) [0.6667, 0.3333, 0.3336]\n",
+       "PeriodicSite: Mo (0.0000, 1.8421, 14.2169) [0.3333, 0.6667, 0.6669]\n",
+       "PeriodicSite: S (0.0000, 0.0000, 12.6516) [0.0000, 0.0000, 0.5935]\n",
+       "PeriodicSite: S (1.5953, 0.9211, 19.7577) [0.6667, 0.3333, 0.9268]\n",
+       "PeriodicSite: S (0.0000, 1.8421, 5.5455) [0.3333, 0.6667, 0.2601]\n",
+       "PeriodicSite: S (0.0000, 0.0000, 15.7821) [0.0000, 0.0000, 0.7403]\n",
+       "PeriodicSite: S (1.5953, 0.9211, 1.5700) [0.6667, 0.3333, 0.0736]\n",
+       "PeriodicSite: S (0.0000, 1.8421, 8.6761) [0.3333, 0.6667, 0.4070]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Structure Summary\n",
+       "Lattice\n",
+       "    abc : 3.1906 3.1906 21.3182\n",
+       " angles : 90.0 90.0 119.99999999999999\n",
+       " volume : 187.94288350186463\n",
+       "      A : 3.1906 0.0 1.9536790386797724e-16\n",
+       "      B : -1.5952999999999993 2.7631406533146303 1.9536790386797724e-16\n",
+       "      C : 0.0 0.0 21.3182\n",
+       "PeriodicSite: S (0.0000, 0.0000, 0.0000) [0.0000, 0.0000, 0.0000]\n",
+       "PeriodicSite: S (0.0000, 0.0000, 3.1306) [0.0000, 0.0000, 0.1469]\n",
+       "PeriodicSite: Mo (0.0000, 0.0000, 8.6712) [0.0000, 0.0000, 0.4068]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'160_a_a_a'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "********************************************************************************\n"
+     ]
     }
    ],
    "source": [
@@ -467,7 +518,9 @@
     "\n",
     "cifs = ['../data/MoS2_mp-1434_computed.cif',\n",
     "        '../data/MoS2_mp-1434_conventional_standard.cif',\n",
-    "        '../data/MoS2_mp-1434_primitive.cif']\n",
+    "        '../data/MoS2_mp-1434_primitive.cif',\n",
+    "        '../data/MoS2_mp-1434_symmetrized.cif']\n",
+    "\n",
     "structures = []\n",
     "for cif in cifs:\n",
     "    structures += pymatgen.io.cif.CifParser(cif).get_structures(primitive=False)\n",
