More file shuffling and new elastic notebooks

--- a/zocrys/notebook/test/zoap_test_matrpoj.ipynb
+++ b/zocrys/notebook/test/zoap_test_matrpoj.ipynb
@@ -6,9 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sys import path\n",
+    "path.insert(0, '/home/azadoks/git/glosim2/')\n",
+    "path.insert(0, '/home/azadoks/git/structureREST/zocrys/lib/')\n",
     "from collections import OrderedDict\n",
     "from pymatgen import MPRester\n",
-    "import requests"
+    "from libmatch.soap import get_Soaps\n",
+    "import numpy as np\n",
+    "import zoap"
    ]
   },
   {
@@ -47,7 +52,14 @@
    "outputs": [],
    "source": [
     "with MPRester('0WqdPfXxloze6T9N') as mpr:\n",
-    "    structures = OrderedDict([(name, mpr.get_structure_by_material_id(id)) for name, id in material_ids.iteritems()])"
+    "    structures = OrderedDict([(name, mpr.get_structure_by_material_id(id))\n",
+    "                              for name, id in material_ids.iteritems()])\n",
+    "\n",
+    "qps = OrderedDict([(name, zoap.structure2qp(structure,\n",
+    "                                            anonymize=True, scale=True,\n",
+    "                                            standardize=True, primitivize=True)\n",
+    "                   )\n",
+    "                   for name, structure in structures.iteritems()])"
    ]
   },
   {
@@ -56,15 +68,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "endpoints = {'distances': ['matminer', 'pymatgen', 'soap'],\n",
-    "             'comparisons': ['matminer', 'pymatgen', 'soap'],\n",
-    "             'fingerprints': ['matminer', 'stidy', 'soap']}\n",
-    "for endpoint, functions in endpoints.items():\n",
-    "    for function in functions:\n",
-    "        print(endpoint, function)\n",
-    "        r = requests.get('http://127.0.0.1:5000/v1/{}/{}/'.format(endpoint, function), params=payload)\n",
-    "        results = json.loads(r.text)\n",
-    "        print(results)"
+    "soaps = get_Soaps(qps.values(),\n",
+    "                  nocenters=None, chem_channels=False,\n",
+    "                  centerweight=1.0, gaussian_width=0.5,\n",
+    "                  cutoff=2.5, cutoff_transition_width=0.5,\n",
+    "                  nmax=16, lmax=14,\n",
+    "                  spkitMax=None, nprocess=8,\n",
+    "                  chemicalProjection=None, dispbar=False,\n",
+    "                  is_fast_average=False)"
    ]
   },
   {
@@ -77,9 +88,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
