Argument tracking for zoap_test_db

--- a/notebook/elastic/elastic_matproj.ipynb
+++ b/notebook/elastic/elastic_matproj.ipynb
@@ -77,8 +77,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pool = Pool(processes=cpu_count())  # lower processes if memory gets out of hand\n",
-    "df['quippy'] = pool.map(structure2qp_wrap, df['structure'])\n",
+    "pool = Pool(processes=cpu_count())  # lower processes if memory gets out of hand -OR- implement chunking\n",
+    "df['quippy'] = pool.map(structure2quippy_wrap, df['structure'])\n",
     "pool.close()\n",
     "pool.join()"
    ]
