--- a/notebook/test/zoap_test_db.ipynb
+++ b/notebook/test/zoap_test_db.ipynb
@@ -23,18 +23,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def structure2qp_wrap(structure):\n",
-    "    '''\n",
-    "    Wrapper to use zoap.structure2qp with multiprocessing.Pool.map()\n",
-    "    Anonymize _greatly_ speeds up SOAP calculation.\n",
-    "    If structures are not already primitive,\n",
-    "        primitivize can speed up SOAP calculation.\n",
-    "    '''\n",
-    "    return zoap.structure2qp(structure,\n",
-    "                             anonymize=True, scale=True,\n",
-    "                             standardize=True, primitivize=True,\n",
-    "                             symprec=1e-3, from_dict=True)\n",
-    "\n",
     "def get_chunk_indices(total_size, chunk_size):\n",
     "    '''\n",
     "    Generate list of index tuples to chunk up a big set of data\n",
@@ -69,7 +57,44 @@
     "matminer_coll = db['matminer']\n",
     "soap_coll = db['soap']\n",
     "\n",
-    "qp_coll = db['quippy']"
+    "args_coll = db['args']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Anonymize _greatly_ speeds up SOAP calculation.\n",
+    "# If structures are not already primitive,\n",
+    "#     primitivize can speed up SOAP calculation.\n",
+    "quippy_args = {'anonymize': True, 'scale': True,\n",
+    "               'standardize': True, 'primitivize': True,\n",
+    "               'symprec': 1e-3}\n",
+    "\n",
+    "soap_args = {'nocenters': None, 'chem_channels': False,\n",
+    "             'centerweight': 1.0, 'gaussian_width': 0.5,\n",
+    "             'cutoff': 3.5, 'cutoff_transition_width': 0.5,\n",
+    "             'nmax': 8, 'lmax': 6,\n",
+    "             'spkitMax': None, 'chemicalProjection': None,\n",
+    "             'is_fast_average': False}\n",
+    "\n",
+    "args_doc = {'structure2quippy': quippy_args,\n",
+    "            'soap': soap_args}\n",
+    "args_result = args_coll.isert(args_doc)\n",
+    "args_id = args_result.inserted_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def structure2quippy_wrap(structure):\n",
+    "    '''Wrapper to use zoap.structure2qp with multiprocessing.Pool.map() or pandas.DataFrame.apply()'''\n",
+    "    return zoap.structure2quippy(structure, **quippy_args, from_dict=True)"
    ]
   },
   {
@@ -79,21 +104,24 @@
    "outputs": [],
    "source": [
     "chunk_size = 10000\n",
-    "for source_collection in [icsd_coll, mpds_coll, cod_coll]:\n",
-    "    source_find = source_collection.find(projection=['structure'])\n",
-    "    source_count = source_collection.find.count()\n",
+    "collections = {'icsd': icsd_coll, 'mpds': mpds_coll, 'cod': cod_coll}\n",
+    "for source_name, source_coll in colls.iteritems():\n",
+    "    source_find = source_coll.find(projection=['structure'])\n",
+    "    source_count = source_coll.find.count()\n",
     "    pool = Pool(processes=n_cpus())\n",
     "    for indices in get_chunk_indices(source_count, chunk_size):\n",
-    "        source_docs = list(source_find[indices[0], indices[1]])\n",
-    "        quippies = pool.map(structure2qp_wrap, [d['structure']])  # I love this variable name\n",
-    "        soaps = get_Soaps(quippies,\n",
-    "                          nocenters=None, chem_channels=False,\n",
-    "                          centerweight=1.0, gaussian_width= 0.25,\n",
-    "                          cutoff=2.5, cutoff_transition_width=0.5,\n",
-    "                          nmax=10, lmax=8,\n",
-    "                          spkitMax=None, nprocess=8,\n",
-    "                          chemicalProjection=None, dispbar=False,\n",
-    "                          is_fast_average=False)"
+    "        source_docs = list(source_find[indices[0], indices[1]])  # grab source docs chunk\n",
+    "        quippies = pool.map(structure2qp_wrap, [d['structure']])  # convert Structures to Atoms\n",
+    "        soaps = get_Soaps(quippies, **soap_args, nprocess=8, dispbar=False)  # calculate soaps\n",
+    "        soap_docs = [{'soap': soap, 'quippy': quippy,\n",
+    "                      'source_id': source_doc['_id'],\n",
+    "                      'source_collection': source_name,\n",
+    "                      'args_id': args_id} for soap, quippy in zip(soaps, quippies)]  # create soap docs\n",
+    "        result = soap_coll.insert_many(soap_docs)\n",
+    "        print(len(result.inserted_ids))\n",
+    "        del source_docs, quippies, soaps, soap_docs, result\n",
+    "    pool.join()\n",
+    "    pool.close()"
    ]
   }
  ],
