Code documentation and feature additon in zoap_test-db

--- a/notebook/elastic/elastic_matproj.ipynb
+++ b/notebook/elastic/elastic_matproj.ipynb
@@ -9,7 +9,7 @@
     "from sys import path\n",
     "path.insert(0, '/home/azadoks/git/glosim2/')\n",
     "path.insert(0, '/home/azadoks/git/structureREST/lib/')\n",
-    "from pymatgen import MPRester\n",
+    "from pymatgen import MPRester, Structure\n",
     "from pymatgen.io.cif import CifParser\n",
     "from libmatch.soap import get_Soaps\n",
     "from multiprocessing import Pool, cpu_count\n",
@@ -31,6 +31,10 @@
     "        or pandas.DataFrame.apply()\n",
     "    '''\n",
     "    return CifParser.from_string(cif_string).get_structures()[0]\n",
+    "\n",
+    "def structure_from_dict_wrap(structure):\n",
+    "    '''Convert structure dictionary to pymatgen.core.Structure object'''\n",
+    "    return Structure.from_dict(structure)\n",
     "\n",
     "def structure2qp_wrap(structure):\n",
     "    '''\n",
@@ -57,18 +61,19 @@
     "    with MPRester('0WqdPfXxloze6T9N') as mpr:\n",
     "        criteria = {'elasticity': {'$ne': None}}\n",
     "        properties = ['pretty_formula', 'structure', 'elasticity', 'material_id']\n",
-    "        results = mpr.query(criteria, properties, mp_decode=True)\n",
+    "        results = mpr.query(criteria, properties, mp_decode=True)  # structures come as Sructures\n",
     "    df = pd.DataFrame(results)\n",
     "elif data_source == 'matproj_query_json':\n",
     "    with open('../../data/elastic/ec_query.json', 'r') as f:\n",
     "        results = json.load(f)\n",
     "    df = pd.DataFrame(results)\n",
+    "    df['structures'] = df.apply(structure_from_dict_wrap)  # structures come as dictionaries\n",
     "elif data_source == 'matproj_nature_json':\n",
     "    with open('../../data/elastic/ec.json', 'r') as f:\n",
     "        results = json.load(f)\n",
     "    df = pd.DataFrame(results)\n",
     "    df['cif'] = df['structure']\n",
-    "    df['structure'] = df['cif'].apply(cifparser_from_string_wrap)"
+    "    df['structure'] = df['cif'].apply(cifparser_from_string_wrap)  # structures come as CIFs"
    ]
   },
   {
@@ -77,7 +82,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pool = Pool(processes=cpu_count())  # lower processes if memory gets out of hand -OR- implement chunking\n",
+    "N_CPUS = cpu_count() # lower processes if memory gets out of hand -OR- implement chunking\n",
+    "pool = Pool(processes=N_CPUS)  \n",
     "df['quippy'] = pool.map(structure2quippy_wrap, df['structure'])\n",
     "pool.close()\n",
     "pool.join()"
