--- a/notebook/test/zoap_test_db.ipynb
+++ b/notebook/test/zoap_test_db.ipynb
@@ -8,18 +8,23 @@
    "source": [
     "from sys import path\n",
     "path.insert(0, '/home/azadoks/git/glosim2/')\n",
-    "path.insert(0, '/home/azadoks/git/structureREST/zocrys/lib/')\n",
+    "path.insert(0, '/home/azadoks/git/structureREST/lib/')\n",
     "from collections import OrderedDict\n",
     "from libmatch.soap import get_Soaps\n",
-    "from multiprocessing import Pool, n_cpus\n",
+    "from multiprocessing import Pool, cpu_count\n",
+    "from quippy.io import AtomsWriter\n",
+    "from json import loads\n",
+    "from os import remove\n",
     "import numpy as np\n",
+    "import cStringIO\n",
+    "import gzip\n",
     "import zoap\n",
     "import pymongo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,9 +71,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Anonymize _greatly_ speeds up SOAP calculation.\n",
+    "N_CPUS = cpu_count()\n",
+    "# Anonymize _greatly_ speeds up SOAP calculations\n",
+    "#     at the loss of species\n",
     "# If structures are not already primitive,\n",
-    "#     primitivize can speed up SOAP calculation.\n",
+    "#     primitivize can speed up SOAP calculations by\n",
+    "#     reducing the number of sites in the cell\n",
     "quippy_args = {'anonymize': True, 'scale': True,\n",
     "               'standardize': True, 'primitivize': True,\n",
     "               'symprec': 1e-3}\n",
@@ -82,7 +90,7 @@
     "\n",
     "args_doc = {'structure2quippy': quippy_args,\n",
     "            'soap': soap_args}\n",
-    "args_result = args_coll.isert(args_doc)\n",
+    "args_result = args_coll.insert_one(args_doc)\n",
     "args_id = args_result.inserted_id"
    ]
   },
@@ -94,7 +102,7 @@
    "source": [
     "def structure2quippy_wrap(structure):\n",
     "    '''Wrapper to use zoap.structure2qp with multiprocessing.Pool.map() or pandas.DataFrame.apply()'''\n",
-    "    return zoap.structure2quippy(structure, **quippy_args, from_dict=True)"
+    "    return zoap.structure2quippy(structure, from_dict=True, **quippy_args)"
    ]
   },
   {
@@ -103,26 +111,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chunk_size = 10000\n",
-    "collections = {'icsd': icsd_coll, 'mpds': mpds_coll, 'cod': cod_coll}\n",
+    "chunk_size = 100\n",
+    "colls = {'icsd': icsd_coll, 'mpds': mpds_coll, 'cod': cod_coll}\n",
     "for source_name, source_coll in colls.iteritems():\n",
-    "    source_find = source_coll.find(projection=['structure'])\n",
-    "    source_count = source_coll.find.count()\n",
-    "    pool = Pool(processes=n_cpus())\n",
-    "    for indices in get_chunk_indices(source_count, chunk_size):\n",
-    "        source_docs = list(source_find[indices[0], indices[1]])  # grab source docs chunk\n",
-    "        quippies = pool.map(structure2qp_wrap, [d['structure']])  # convert Structures to Atoms\n",
-    "        soaps = get_Soaps(quippies, **soap_args, nprocess=8, dispbar=False)  # calculate soaps\n",
-    "        soap_docs = [{'soap': soap, 'quippy': quippy,\n",
+    "    # query database + get info\n",
+    "    source_find = source_coll.find({'n_sites': {'$lte': 128}}, \n",
+    "                                   projection=['structure'],\n",
+    "                                   modifiers={'$snapshot': True},\n",
+    "                                   batch_size=chunk_size)\n",
+    "    source_count = source_find.count()\n",
+    "    # create persistent objects\n",
+    "    pool = Pool(processes=N_CPUS)\n",
+    "    quippy_writer = AtomsWriter('string', format='string')\n",
+    "    # get bounds indices for chunks\n",
+    "    chunk_indices = get_chunk_indices(source_count, chunk_size)\n",
+    "    for indices in chunk_indices:\n",
+    "        # grab source docs chunk\n",
+    "        source_docs = np.array(list(source_find[indices[0]: indices[1]]))\n",
+    "        # convert Structures to Atoms      \n",
+    "        quippies = np.array(pool.map(structure2quippy_wrap, [d['structure'] for d in source_docs]))\n",
+    "        # remove dud (probably disordered) structure entries\n",
+    "        source_docs = source_docs[np.where(quippies != None)]\n",
+    "        quippies = quippies[np.where(quippies != None)]\n",
+    "        # write quippy atoms to strings using extended xyz format\n",
+    "        quippy_strs = [quippy_writer.write(quippy) for quippy in quippies]\n",
+    "        # calculate soaps\n",
+    "        calculate soaps ([OrderedDict[(str, np.ndarray([float]))]])\n",
+    "        soaps = get_Soaps(quippies, nprocess=N_CPUS, dispbar=False, **soap_args)\n",
+    "        # prepare soaps for serialization\n",
+    "        soaps = [{key: value.tolist() for key, value in soap.iteritems()} for soap in soaps]\n",
+    "        # TODO: fix too large source documents (soaps)\n",
+    "        # create soap docs\n",
+    "        soap_docs = [{'soap': soap, 'quippy': quippy_str,\n",
     "                      'source_id': source_doc['_id'],\n",
     "                      'source_collection': source_name,\n",
-    "                      'args_id': args_id} for soap, quippy in zip(soaps, quippies)]  # create soap docs\n",
+    "                      'args_id': args_id}\n",
+    "                     for soap, quippy_str, source_doc in \n",
+    "                         zip(soaps, quippy_strs, source_docs)]\n",
+    "#         soap_docs = [{'soap': soap,\n",
+    "#                       'source_id': source_doc['_id'],\n",
+    "#                       'source_collection': source_name,\n",
+    "#                       'args_id': args_id}\n",
+    "#                      for soap, source_doc in \n",
+    "#                          zip(soaps, source_docs)]  # create soap docs\n",
     "        result = soap_coll.insert_many(soap_docs)\n",
     "        print(len(result.inserted_ids))\n",
     "        del source_docs, quippies, soaps, soap_docs, result\n",
-    "    pool.join()\n",
-    "    pool.close()"
+    "        raise Exception('Done')\n",
+    "        pool.join()\n",
+    "        pool.close()\n",
+    "        quippy_writer.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
