Moved non-parametric wrapper functions to zoap library

--- a/notebook/elastic/elastic_db.ipynb
+++ b/notebook/elastic/elastic_db.ipynb
@@ -31,23 +31,7 @@
     "    '''\n",
     "    return zoap.structure2qp(structure,\n",
     "                             anonymize=True, scale=True,\n",
-    "                             standardize=True, primitivize=True)\n",
-    "\n",
-    "def get_chunk_indices(total_size, chunk_size):\n",
-    "    '''\n",
-    "    Generate list of index tuples to chunk up a big set of data\n",
-    "    Args:\n",
-    "        total_size (int): number of items in big set\n",
-    "        chunk_size (int): number of items in all but the last chunk set\n",
-    "    Returns:\n",
-    "        [(int, int)]: list of index tuples\n",
-    "    '''\n",
-    "    i = 0\n",
-    "    indices = []\n",
-    "    while i < total_size:\n",
-    "        indices.append((i, i+chunk_size))\n",
-    "        i += chunk_size\n",
-    "    return indices"
+    "                             standardize=True, primitivize=True)"
    ]
   },
   {
