--- a/notebook/elastic/elastic_matproj.ipynb
+++ b/notebook/elastic/elastic_matproj.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/azadoks/miniconda3/envs/python2/lib/python2.7/site-packages/pymatgen/__init__.py:87: UserWarning: \n",
+      "Pymatgen will drop Py2k support from v2019.1.1. Pls consult the documentation\n",
+      "at https://www.pymatgen.org for more details.\n",
+      "  at https://www.pymatgen.org for more details.\"\"\")\n"
+     ]
+    }
+   ],
    "source": [
     "from sys import path\n",
     "path.insert(0, '/home/azadoks/git/glosim2/')\n",
@@ -21,21 +32,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cifparser_from_string_wrap(cif_string):\n",
-    "    '''\n",
-    "    Wrapper to use pymatgen.io.cif.CifParser with multiprocessing.Pool.map()\n",
-    "        or pandas.DataFrame.apply()\n",
-    "    '''\n",
-    "    return CifParser.from_string(cif_string).get_structures()[0]\n",
-    "\n",
-    "def structure_from_dict_wrap(structure):\n",
-    "    '''Convert structure dictionary to pymatgen.core.Structure object'''\n",
-    "    return Structure.from_dict(structure)\n",
-    "\n",
     "def structure2qp_wrap(structure):\n",
     "    '''\n",
     "    Wrapper to use zoap.structure2qp with multiprocessing.Pool.map()\n",
@@ -67,13 +67,13 @@
     "    with open('../../data/elastic/ec_query.json', 'r') as f:\n",
     "        results = json.load(f)\n",
     "    df = pd.DataFrame(results)\n",
-    "    df['structures'] = df.apply(structure_from_dict_wrap)  # structures come as dictionaries\n",
+    "    df['structures'] = df.apply(zoap.structure_from_dict_wrap)  # structures come as dictionaries\n",
     "elif data_source == 'matproj_nature_json':\n",
     "    with open('../../data/elastic/ec.json', 'r') as f:\n",
     "        results = json.load(f)\n",
     "    df = pd.DataFrame(results)\n",
     "    df['cif'] = df['structure']\n",
-    "    df['structure'] = df['cif'].apply(cifparser_from_string_wrap)  # structures come as CIFs"
+    "    df['structure'] = df['cif'].apply(zoap.cifparser_from_string_wrap)  # structures come as CIFs"
    ]
   },
   {
