--- a/notebook/test/zoap_test_db.ipynb
+++ b/notebook/test/zoap_test_db.ipynb
@@ -28,29 +28,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_chunk_indices(total_size, chunk_size):\n",
-    "    '''\n",
-    "    Generate list of index tuples to chunk up a big set of data\n",
-    "    Args:\n",
-    "        total_size (int): number of items in big set\n",
-    "        chunk_size (int): number of items in all but the last chunk set\n",
-    "    Returns:\n",
-    "        [(int, int)]: list of index tuples\n",
-    "    '''\n",
-    "    i = 0\n",
-    "    indices = []\n",
-    "    while i < total_size:\n",
-    "        indices.append((i, i+chunk_size))\n",
-    "        i += chunk_size\n",
-    "    return indices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "client = pymongo.MongoClient('mongodb://127.0.0.1:27018/')\n",
     "db = client['structureREST']\n",
     "\n",
@@ -124,7 +101,7 @@
     "    pool = Pool(processes=N_CPUS)\n",
     "    quippy_writer = AtomsWriter('string', format='string')\n",
     "    # get bounds indices for chunks\n",
-    "    chunk_indices = get_chunk_indices(source_count, chunk_size)\n",
+    "    chunk_indices = zoap.get_chunk_indices(source_count, chunk_size)\n",
     "    for indices in chunk_indices:\n",
     "        # grab source docs chunk\n",
     "        source_docs = np.array(list(source_find[indices[0]: indices[1]]))\n",
